<resources>
    <string name="app_name">GAHARU-M</string>

    <string name="company_name">Gaharu Gading</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="hive">Trigona Hive</string>
    <string name="gaharu">Agarwood</string>
    <string name="gaharu_tree">Agarwood Tree</string>
    <string name="col_row">Column-Row</string>
    <string name="extraction_rec">Harvest Record</string>
    <string name="inspection_rec">Inspection Record</string>
    <string name="remark">Remark</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="column">Column</string>
    <string name="row">Row</string>
    <string name="nickname">Nickname</string>
    <string name="infusion_rec">Infusion Record</string>
    <string name="scan">Scan</string>
    <string name="extraction_pending">Pending Harvest</string>
    <string name="inspection_pending">Pending Inspection</string>
    <string name="infusion_pending">Pending Infusion</string>
    <string name="view_all">View All</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="new_record">New Record</string>
    <string name="recent_harvest">Recently Harvested</string>
    <string name="save">Save</string>
</resources>
