<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".9"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold"
                    android:text="@string/hive"
                    android:id="@+id/textViewId" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textAlignment="textEnd"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/col_row"
                    android:id="@+id/textViewColRow" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/company_name"
                android:textStyle="bold"
                android:id="@+id/textViewFarm"/>

            <ImageSwitcher
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:id="@+id/imageSwitcher"
                android:layout_gravity="center_horizontal" >
                <android.support.design.widget.FloatingActionButton
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@android:drawable/ic_menu_camera"
                    android:scaleType="fitCenter"
                    android:id="@+id/fabAddImage"/>
            </ImageSwitcher>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/extraction_rec"
                android:enabled="false"
                android:id="@+id/buttonExtractRec" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inspection_rec"
                android:enabled="false"
                android:id="@+id/buttonInspectRec" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/remark"
                android:id="@+id/textViewRemark" />


        </LinearLayout>

    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:text="@string/edit"
        android:textAllCaps="true"
        android:id="@+id/buttonEdit" />
</LinearLayout>